--- a/_career/2020_03_31_Covid.md
+++ b/_career/2020_03_31_Covid.md
@@ -5,32 +5,45 @@ date: March 31, 2020
 mathjax: true
 ---
 
+Alumni of [USF's Masters of Data Science program](https://www.usfca.edu/arts-sciences/graduate-programs/data-science) began reaching out with job concerns right around the end of March. While many (luckily) were unaffected, a number of students lost jobs or were told that there jobs were in jeopardy.
+
+The following email is advice that I sent to them at this time. I think that has some (generally) good advice for data scientists when faced with economic uncertainity. I did some light editing from my original email, but the content remains the same. 
+
+
 A couple of things in these crazy times:
 
-    First off, be safe!
-    A number of alumni have reached out either b/c they recently were let go or because they are worried as they may soon be.
-    If you are hiring, please be active by either jumping into your three-cheers channel on slack or by emailing Kirsten (or I)!
-    I'll keep firing off jobs that I hear about via email. For example, see the posting at the bottom -- they reached out earlier last week and if you are interested and senior level let me know.
+* First off, be safe!
+* A number of alumni have reached out either b/c they recently were let go or because they are worried as they may soon be.
+* If you are hiring, please be active -- let other alumni know! I'm also happy to share any jobs.
+
 
 I also wanted to say a few thoughts that I've been sharing over the last few weeks that are especially pertinent now. Note that all of the below is IMO, take it with a grain of salt, its my biased perspective and based on people I hang around.. I mean "zoom" with. ugh.
 
-    Even before covid/corona many companies had started shifting their hiring away from the cities like SF / Seattle / etc. This was primarily due to the cost of running operations in these locations and companies were doing it different ways, but (IMO), there already had been a shift in hiring practices before the virus.
-        Some companies had started offering incentives for people to relocate outside of SF and one company we know had stopped backfilling positions in the bay area. If someone in their SF office quit, they would post that job posting only in their other locations.
-        The virus has sped this up.
-    Companies are still hiring currently, but they are being careful about it. Already some current students are getting interviews, but the number is (unsurprisingly) a lot less than previous years.
-    The trend in DS has become much more technical over the last few years and interviewing is reflecting that. If you haven't opened leetcode, hit up your SQL, etc. then when applying for IC positions you'll be at a disadvantage. Technologies like Docker, git, spark are all the rage and having experience (and maybe a git repo or two using them as a side project) isn't going to hurt.
+Even before covid/corona many companies had started shifting their hiring away from the super-cities (SF / Seattle / Los Angles). This was primarily due to the cost of running operations in these locations. We have already seen companies take a few different approaches to this, but there was already a shift occuring before the virus.
+
+Some companies had started offering incentives for people to relocate outside of SF and a few companies we know had stopped backfilling positions in the bay area. If someone in their SF office quit, they would post that job posting only in their other locations.
+
+The virus has sped this up.
+
+Companies are still hiring currently, but they are being careful about it. Already some current students are getting interviews, but the number is (unsurprisingly) a lot less than previous years.
+
+The trend in DS has become much more technical over the last few years and interviewing is reflecting that. If you haven't opened leetcode, hit up your SQL, etc. then when applying for IC positions you'll be at a disadvantage. Technologies like Docker, git, spark are all the rage and having experience (and maybe a git repo or two using them as a side project) isn't going to hurt.
 
 So, some advice, if you think you may be interviewing soon:
 
-    Update your docs (resume, cover letter, linkedin, git repo). Be ready now with them.
-    Refresh your memory, invest in some more tech skills. Make sure you have your skills up to date with whatever job you are applying for.
-    Be prepared for doing all of your interviews via video conference. Do you have a good set up at home? Internet? Microphone / headphones / background?
+* Update your docs (resume, cover letter, linkedin, git repo). Be ready now with them.
+* Refresh your memory, invest in some more tech skills. Make sure you have your skills up to date with whatever job you are applying for.
+* Be prepared for doing all of your interviews via video conference. Do you have a good set up at home? Internet? Microphone / headphones / background?
 
-And, when you look for jobs, two important things:
+And, when you look for jobs, three important things:
 
-    Consider expanding your search outside of the bay area / seattle / los angeles / super-city. I expect a lot of the hiring that occurs over the next year to be outside these locations and in historically underappreciated markets.
-    Consider expanding your search horizontally. If you had a DS role that was really technical, maybe put in some time and start applying for more software development roles. If you had a data scientist job, would you be willing to apply to be a data analyst? I know that this suboptimal, but when things get tight, 1 job > 0 jobs.
-    Consider what your domain expertise is (especially if you have been working for a few years). When things get tight, most companies default to hiring people with known expertise. If you have some of that, make sure to show it on your resume / cover letter.
+1. Consider expanding your search outside of the bay area / seattle / los angeles / super-city. I expect a lot of the hiring that occurs over the next year to be outside these locations and in historically underappreciated markets.
+1. Consider expanding your search horizontally. If you had a DS role that was really technical, maybe put in some time and start applying for more software development roles. If you had a data scientist job, would you be willing to apply to be a data analyst? I know that this suboptimal, but when things get tight, 1 job > 0 jobs.
+1. Consider what your domain expertise is (especially if you have been working for a few years). When things get tight, most companies default to hiring people with known expertise. If you have some of that, make sure to show it on your resume / cover letter.
 
+One thing to keep in mind during this is that it is a _major_ event: you aren't alone. This means that lots of other people are in the same shoes and information is a bit more forthcoming. 
 
+For example, [layoffs.fyi](http://layoffs.fyi), has been doing a good job or keeping up to date with companies that are laying people off and providing links to lists of companies that are still hiring (click on layoff tracker -> list of companies still hiring).  If you find yourself unemployed, check out their site as the lists are constantly being updated.
+
+One of their links is to this website ([candor.co](https://candor.co/hiring-freezes/)) which contains information on both companies which are hiring and which are not. The data is crowdsourced, for better and worse, meaning that you should take it with a grain of salt. 
 
